# application-software

./: .editorconfig  .gitignore  .gitmodules  LICENSE
s1e3/: Makefile  main.c
s1e4/: build.sh  common.py  log.py  main.c  text.py  timer.py
s1e4/sql/: init.sql  insert_device.sql  insert_log.sql  select_device.sql  select_stat.sql
s1extra/: Makefile  main.cpp
s2e1/: client.py  pyproject.toml  server.py  server_test.py
s2e1/sql/: init.sql
s3e1/: .clangd  .gitignore  Makefile  client.py  draw.ipynb  main.cpp
s3e1/server/: grid.hpp  main.cpp
