[project]
name = "s2e1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.12",
    "ty>=0.0.1a20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
